kubernetes/components/network-policies/allow-cnpg.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-cnpg
spec:
  podSelector:
    matchLabels:
      cnpg.io/instanceRole: replica
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          app: cloudnative-pg
