kubernetes/components/network-policies/allow-remote-node.yaml
kind: CiliumNetworkPolicy
apiVersion: cilium.io/v2
metadata:
  name: remote-node-allow
spec:
  endpointSelector:
    matchLabels: {}
  ingress:
  - fromEntities:
    - remote-node
